Implementação das correções dos testes