@@ -7,7 +7,6 @@ import org.mapstruct.Mapping;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Mapper(componentModel = "spring")
 public interface EstabelecimentoMapper {
@@ -25,7 +24,7 @@ public interface EstabelecimentoMapper {
         return Arrays.stream(value.split(","))
                 .map(String::trim)
                 .filter(s -> !s.isEmpty())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     default String listToString(List<String> value) {
